--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
     "name": "dodgercms",
     "version": "0.0.1",
-    "description": "",
-    "author": "Chris Zieba (zieba.chris@gmail.com)",
+    "description": "A simple yet powerful markdown CMS.",
+    "author": {
+        "name": "Chris Zieba",
+        "email": "zieba.chris@gmail.com"
+    },
     "repository": {
         "type": "git",
         "url": "git@github.com:ChrisZieba/dodgercms.git"
     },
-    "dependencies": {},
     "devDependencies": {
         "grunt": "~0.4.2",
         "grunt-contrib-jshint": "~0.6.3",
@@ -15,6 +17,7 @@
         "grunt-contrib-uglify": "~0.2.2",
         "grunt-contrib-concat": "~0.3.0",
         "grunt-contrib-handlebars": "~0.10.1",
-        "grunt-contrib-coffee": "~0.13.0"
+        "grunt-contrib-coffee": "~0.13.0",
+        "grunt-contrib-qunit": "~0.7.0"
     }
 }
