--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "dodgercms",
     "version": "0.0.1",
-    "description": "A simple yet powerful markdown CMS.",
+    "description": "A static markdown CMS built on top of Amazon S3.",
     "author": {
         "name": "Chris Zieba",
         "email": "zieba.chris@gmail.com"
