--- a/.jshintrc
+++ b/.jshintrc
@@ -1,13 +1,10 @@
 {
   "browser": true,
-  "node": true,
   "bitwise": true,
-  "camelcase": true,
   "curly": true,
   "expr": true,
   "immed": true,
-  "indent": 2,
-  "maxlen": 80,
+  "maxdepth": 5,
   "newcap": true,
   "noarg": true,
   "quotmark": "single",
@@ -16,6 +13,14 @@
   "strict": true,
   "globals": {
     "define": true,
-    "module": true
+    "alert": true,
+    "module": true,
+    "jQuery": true,
+    "$": true,
+    "AWS": true,
+    "Handlebars": true,
+    "async": true,
+    "marked": true,
+    "hljs": true
   }
 }
