Add Grunt task to deploy manager to S3
* Add grunt-s3 node module
* Register `s3` Grunt task
* Add sample grunt-aws.json file
* Ignore grunt-aws.json to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ coverage
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
+# AWS creds for deploying DodgerCMS to bucket
+grunt-aws.json
+
 # node-waf configuration
 .lock-wscript
 
