--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-handlebars": "~0.10.1",
     "grunt-mocha": "~0.4.6",
+    "grunt-s3": "latest",
     "mocha": "~1.14.0",
     "chai": "~1.8.1",
     "sinon": "~1.14.1"
