Added method to publish all files and refresh the main menu

--- a/.jshintrc
+++ b/.jshintrc
@@ -21,6 +21,9 @@
     "Handlebars": true,
     "async": true,
     "marked": true,
-    "hljs": true
+    "hljs": true,
+    "_": true,
+    "Backbone": true,
+    "console": true
   }
 }
