--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "homepage": "https://dodgercms.com",
   "version": "0.0.2",
   "description": "A static markdown CMS built on top of Amazon S3.",
-  "keywords": ["markdown", "cms", "amazon", "s3"],
-  "license" : "MIT",
+  "keywords": [
+    "markdown",
+    "cms",
+    "amazon",
+    "s3"
+  ],
+  "license": "MIT",
   "author": {
     "name": "Chris Zieba",
     "email": "zieba.chris@gmail.com",
-    "url" : "http://chriszieba.com"
+    "url": "https://chriszieba.com"
   },
   "repository": {
     "type": "git",
